# replaxy

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  first.excalidraw  livekit.toml.example  lk-mav.config.yaml  pyproject.toml  replaxy.config.yaml
config/: agents.example.yaml
scripts/: dispatch_agent.py
skills/lk-mav-orchestration/: SKILL.md  reference.md
skills/replaxy-orchestration/: SKILL.md  reference.md
src/: agents.py  config.py  memory.py  orchestrator_agent.py
src/cli/: __init__.py  config_loader.py  env.py  ui.py  validators.py
